リファクタリング

--- a/public/log.yml
+++ b/public/log.yml
@@ -544,3 +544,21 @@
 ---
 :fromNick: ! '!'
 :body: 高い！！！この広告はCTR高い！！！！
+---
+:fromNick: Glass_saga
+:body: hi
+---
+:fromNick: ! '!'
+:body: どうして？
+---
+:fromNick: Glass_saga
+:body: hi
+---
+:fromNick: ! '!'
+:body: なんでやねん。
+---
+:fromNick: Glass_saga
+:body: こんにちは。
+---
+:fromNick: ! '!'
+:body: おはよう。
