reudy_readme.txtを削除

--- a/public/log.yml
+++ b/public/log.yml
@@ -562,3 +562,27 @@
 ---
 :fromNick: ! '!'
 :body: おはよう。
+---
+:fromNick: Glass_saga
+:body: hi
+---
+:fromNick: ! '!'
+:body: いえー
+---
+:fromNick: Glass_saga
+:body: good
+---
+:fromNick: ! '!'
+:body: こんばんは。
+---
+:fromNick: Glass_saga
+:body: good
+---
+:fromNick: ! '!'
+:body: そういえば九州新幹線駅車内メロディCDがJR九州の通販で買えるってあるけど見当たらない。現地で買う場合車内販売でないと買えないみたいだから手に入れる方法に困っている。
+---
+:fromNick: Glass_saga
+:body: いえーい
+---
+:fromNick: ! '!'
+:body: どうも。
